# Smart-Home-PyAGH-Firmware

./: CMakeLists.txt  README.md  app.overlay  prj.conf
inc/: sensors.h  wifi.h
src/: main.c  sensors.c  wifi.c
